--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Piyush_Pandey",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/icons": "^4.11.2",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
